--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="../Portfolio Website/css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.js"
    
     <link rel="stylesheet" href="css/style.css">
     <style>
