--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                       <span>I AM A WEB FULL STACK DEVELOPER</span>
                      <b> <p style="font-family: Arial, Helvetica, sans-serif;">I worked as a web developer intern at Quadrant Technologies(Hyderabad),My focus is 
                         on designing robust application and developing websites that look grate and work well,</p></b>
-                           <a href="../../new3Dproject/Portfolio Website/css/NsNewResumes.pdf" download="MY RESUME" class="btn btn-1"><b style="font-family: Arial, Helvetica, sans-serif;">Download Resume</b></a>
+                           <a href="NsNewResume (1).pdf" download="MY RESUME" class="btn btn-1"><b style="font-family: Arial, Helvetica, sans-serif;">Download Resume</b></a>
                   </div>
                   <div class="home-image"  style="height: 600px;">
                       <div class="img-box" >
-                          <img src="../../new3Dproject/Portfolio Website/images/newSonu.png" alt="" >
+                          <img src="newSonu.png" alt="" >
                       </div>
                   </div>
               </div>
@@ -71,7 +71,7 @@
               <div class="row align-items-center justify-content-center">
                   <div class="about-image">
                       <div class="img-box">
-                          <img src="images/about_hero.png" alt="">
+                          <img src="about_hero.png" alt="">
                           <div class="about-shape"></div>
                       </div>
                   </div>
@@ -328,7 +328,7 @@
                   <div class="portfolio-item" data-category="WEB DESIGN">
                       <div class="portfolio-item-inner">
                           <div class="portfolio-img">
-                              <img src="images/portfolio/portfolio-1.jpg" alt="">
+                              <img src="portfolio-1.jpg" alt="">
                           </div>
                           <div class="portfolio-info">
                               <h4>WEB-DESIGN</h4>
@@ -342,7 +342,7 @@
                   <div class="portfolio-item" data-category="wordpress">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="images/portfolio/portfolio-2.jpg" alt="">
+                            <img src="portfolio-2.jpg" alt="">
                         </div>
                         <div class="portfolio-info">
                             <h4>WEB-DESIGN</h4>
@@ -356,7 +356,7 @@
                    <div class="portfolio-item" data-category="photography">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="images/portfolio/portfolio-3.jpg" alt="">
+                            <img src="portfolio-3.jpg" alt="">
                         </div>
                         <div class="portfolio-info">
                             <h4>PHOTOGRAPHY</h4>
@@ -375,7 +375,7 @@
                 <div class="portfolio-item" data-category="web-design" style="padding: 10px;">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="../../image/kfc2 (1).png" height="220px"  width="200px" style="padding: 25px;" alt="">
+                            <img src="kfc2 (1).png" height="220px"  width="200px" style="padding: 25px;" alt="">
                         </div>
                         <div class="p  ortfolio-info">
                             <h4>KFC Design</h4>
@@ -392,7 +392,7 @@
                    <div class="portfolio-item" data-category="web-design">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="images/portfolio/portfolio-4.jpg" alt="">
+                            <img src="portfolio-4.jpg" alt="">
                         </div>
                         <div class="portfolio-info">
                             <h4>WEB-DESIGN</h4>
@@ -406,7 +406,7 @@
                    <div class="portfolio-item" data-category="wordpress">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="images/portfolio/portfolio-5.jpg" alt="">
+                            <img src="portfolio-5.jpg" alt="">
                         </div>
                         <div class="portfolio-info">
                             <h4>WEB-DESIGN</h4>
@@ -421,7 +421,7 @@
                  <div class="portfolio-item" data-category="web-design">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="../../image/video library.png" height="220px"  width="200px" style="padding: 25px;" alt="">
+                            <img src="video library.png" height="220px"  width="200px" style="padding: 25px;" alt="">
                         </div>
                         <div class="portfolio-info">
                             <h4>Video Library</h4>
@@ -447,7 +447,7 @@
                 <div class="portfolio-item" data-category="web-design" style="padding: 10px;" id="over">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="../../image/shopping.png" height="220px"  width="200px" style="padding: 25px;" alt="">
+                            <img src="shopping.png" height="220px"  width="200px" style="padding: 25px;" alt="">
                         </div>
                         <div class="p  ortfolio-info">
                             <h4>Shopping Website</h4>
@@ -463,7 +463,7 @@
                 <div class="portfolio-item" data-category="web-design" style="padding: 10px;">
                     <div class="portfolio-item-inner">
                         <div class="portfolio-img">
-                            <img src="../../image/zindex.png" height="220px"  width="200px" style="padding: 25px;" alt="">
+                            <img src="zindex.png" height="220px"  width="200px" style="padding: 25px;" alt="">
                         </div>
                         <div class="p  ortfolio-info">
                             <h4>Card Design</h4>
@@ -573,7 +573,7 @@
       <div class="lightbox">
           <div class="lightbox-content">
               <div class="lightbox-close">&times;</div>
-              <img src="images/portfolio/portfolio-2.jpg" onclick="nextItem()" class="lightbox-img" alt="">
+              <img src="portfolio-2.jpg" onclick="nextItem()" class="lightbox-img" alt="">
               <div class="lightbox-caption">
                   <div class="caption-text"></div>
                   <div class="caption-counter"></div>
